Remove text-rendering: optimizelegibility declaration and replace it with font-feature-settings: "liga". Hoping this will fix the issues noted in #25.

--- a/assets/sass/_type.scss
+++ b/assets/sass/_type.scss
@@ -8,13 +8,14 @@
 /* Meat
    ========================================================================== */
 
-html {
-    text-rendering: optimizelegibility;
-}
-
 p {
     font-size: $fsp;
     line-height: $lh;
+    font-feature-settings: "liga";
+        -webkit-font-feature-settings: "liga";
+        -moz-font-feature-settings: "liga";
+        -ms-font-feature-settings: "liga";
+        -o-font-feature-settings: "liga";
 }
 
 .intro {
